Fri Aug 13 00:40:18 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkhandlebox.c: Add missing include.

Thu Aug 12 23:52:12 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #149547, Markus Lausser:
	
	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): 
	* gtk/gtkcombobox.c (gtk_combo_box_size_request): Don't 
	crash if size_request or size_allocate are called early.

	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): Protect
	against being allocated too small.

Thu Aug 12 21:02:57 2004  Matthias Clasen  <maclas@gmx.de>

	* demos/gtk-demo/appwindow.c (about_cb): Adjust to GtkAboutDialog 
	API changes.

	* gtk/gtkaboutdialog.h: 
	* gtk/gtkaboutdialog.c (gtk_about_dialog_set_email_hook): 
	(gtk_about_dialog_set_url_hook): Add callback data and destroy notify 
	for language bindings.  (#149999, Olivier Andrieu)

2004-08-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesystem.c: Underscore-prefix gtk_file_system_module_get_type().
	* gtk/gtkfilechooserdefault.c: Underscore-prefix shortcuts_model_filter_get_type().

	* gtk/gtkimmodule.c: Make gtk_im_module_get_type() static.
	* gtk/gtk.symbols:
	* gtk/gtkinternals.h: Remove the no longer exported get_type functions.

Thu Aug 12 01:35:46 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconview.c: Make the icon view accessible by
	implementing the necesssary ATK interfaces.  (#149728,
	Padraig O'Briain)

Thu Aug 12 00:02:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.c (gtk_action_new): Link to information about
	allowed action names.  (#149620, David Malcolm)

Wed Aug 11 23:14:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk.symbols: 
	* gtk/gtkaction.h:
	* gtk/gtkaction.c (gtk_action_set_sensitive): 
	(gtk_action_set_visible): Add setters for the ::sensitive
	and ::visible properties of GtkAction.  (#149622, David Malcolm)

2004-08-11  Federico Mena Quintero  <federico@ximian.com>

	Fix #149422, #143457:

	* gtk/gtkfilechooserdefault.c